<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.leeds.ccg.andyt</groupId>
    <artifactId>agdt-project-DigitalWelfare</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>agdt-project-DigitalWelfare</name>
    <url>https://github.com/agdturner/agdt-data-land-registry</url>
    <description>Java for the Digital Welfare project.</description>
    <scm>
        <url>git@github.com:agdturner/agdt-data-land-registry.git</url>
        <connection>scm:git:git@github.com:agdturner/agdt-data-land-registry.git</connection>
        <developerConnection>scm:git:git@github.com:agdturner/agdt-data-land-registry</developerConnection>
    </scm>
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://github.com/agdturner/agdt-data-land-registry/LICENSE.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <organization>
        <name>Centre for Computational Geography, University of Leeds</name>
        <url>http://www.ccg.leeds.ac.uk/</url>
    </organization>
    <developers>
        <developer>
            <id>agdturner</id>
            <name>Andy Turner</name>
            <email>a.g.d.turner@leeds.ac.uk</email>
            <organization>Centre for Computational Geography, University of Leeds</organization>
            <organizationUrl>http://www.ccg.leeds.ac.uk</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jts.version>1.12</jts.version>
        <geotools.version>13.2</geotools.version>
        <!--
        <geotools.version>13-SNAPSHOT</geotools.version>
        <geotools.version>14-SNAPSHOT</geotools.version>
        <geotools.version>12</geotools.version>
        <geotools.version>12-RC1</geotools.version>
        <geotools.version>12-SNAPSHOT</geotools.version>
        <geotools.version>12.0.1</geotools.version>
        <geotools.version>12.1</geotools.version>
        -->
        <agdt-java-generic.version>1.0.0</agdt-java-generic.version>
        <agdt-java-generic-data.version>0.1-SNAPSHOT</agdt-java-generic-data.version>
        <agdt-java-generic-data-Census.version>0.1-SNAPSHOT</agdt-java-generic-data-Census.version>
        <agdt-java-generic-data-ONSPD.version>0.1-SNAPSHOT</agdt-java-generic-data-ONSPD.version>
        <agdt-java-generic-data-SHBE.version>0.1-SNAPSHOT</agdt-java-generic-data-SHBE.version>
        <agdt-java-generic-chart.version>0.1-SNAPSHOT</agdt-java-generic-chart.version>
        <agdt-java-generic-math.version>0.1-SNAPSHOT</agdt-java-generic-math.version>
        <agdt-java-generic-geotools.version>0.1-SNAPSHOT</agdt-java-generic-geotools.version>
        <agdt-java-generic-grids.version>1.0-SNAPSHOT</agdt-java-generic-grids.version>
        <agdt-java-generic-vector.version>1.0-SNAPSHOT</agdt-java-generic-vector.version>
        <agdt-java-generic-web.version>0.1-SNAPSHOT</agdt-java-generic-web.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- agdt-java dependency list -->
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-generic</artifactId>
            <version>${agdt-java-generic.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-chart</artifactId>
            <version>${agdt-java-generic-chart.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-data</artifactId>
            <version>${agdt-java-generic-data.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-data-ONSPD</artifactId>
            <version>${agdt-java-generic-data-ONSPD.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-data-SHBE</artifactId>
            <version>${agdt-java-generic-data-SHBE.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-geotools</artifactId>
            <version>${agdt-java-generic-geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-data-Census</artifactId>
            <version>${agdt-java-generic-data-Census.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-grids</artifactId>
            <version>${agdt-java-generic-grids.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-math</artifactId>
            <version>${agdt-java-generic-math.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-vector</artifactId>
            <version>${agdt-java-generic-vector.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.leeds.ccg.andyt</groupId>
            <artifactId>agdt-java-generic-web</artifactId>
            <version>${agdt-java-generic-web.version}</version>
        </dependency>
        <!-- Third party dependencies. -->
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.5.8</version>
        </dependency>
        <dependency>
            <groupId>com.vividsolutions</groupId>
            <artifactId>jts</artifactId>
            <version>${jts.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-shapefile</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-epsg-hsql</artifactId>
            <version>${geotools.version}</version>
        </dependency>   
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-swing</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-brewer</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-geotiff</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-image</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-coverage</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-imageio-ext-gdal</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <!--
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-ogr-jni</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        -->
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-arcgrid</artifactId>
            <version>${geotools.version}</version>
        </dependency>
    </dependencies>
    
    <repositories>
        <repository>
            <id>generic</id>
            <name>GitHub agdturner generic Repository</name>
            <!--
            <url>https://github.com/agdturner/generic/agdturner-generic-3.0.0</url>
            <url>https://github.com/agdturner/generic</url>
            <url>https://github.com/agdturner</url>
            https://github.com/agdturner/generic/tree/master/agdturner-generic-3.0.0/java
            -->
            <url>https://github.com/agdturner/generic</url>
        </repository>
        <repository>
            <id>agdt-geotools</id>
            <name>GitHub agdturner agdt-geotools Repository</name>
            <url>https://github.com/agdturner/agdt-geotools</url>
        </repository>
        <repository>
            <id>agdt-census</id>
            <name>GitHub agdturner agdt-census Repository</name>
            <url>https://github.com/agdturner/agdt-census</url>
        </repository>
        <repository>
            <id>grids</id>
            <name>GitHub agdturner grids Repository</name>
            <url>https://github.com/agdturner/agdt-grids</url>
        </repository>
        <repository>
            <id>vector</id>
            <name>GitHub agdturner vector Repository</name>
            <url>https://github.com/agdturner/agdt-vector</url>
        </repository>
        <repository>
            <id>agdt-web</id>
            <name>GitHub agdturner agdt-web Repository</name>
            <url>https://github.com/agdturner/agdt-web</url>
        </repository>
        <repository>
            <id>agdt-math</id>
            <name>GitHub agdturner agdt-math Repository</name>
            <url>https://github.com/agdturner/agdt-math</url>
        </repository>
        <repository>
            <id>osgeo</id>
            <name>Open Source Geospatial Foundation Repository</name>
            <url>http://download.osgeo.org/webdav/geotools/</url>
        </repository>
        <!--Add the snapshot repository here-->
        <!--
        <repository> 
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>opengeo</id>
            <name>OpenGeo Maven Repository</name>
            <url>http://repo.opengeo.org</url>
        </repository>
        -->
        <!--
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>boundless</id>
            <name>Boundless Maven Repository</name>
            <url>http://repo.boundlessgeo.com/main</url>
        </repository>
        -->
    </repositories>
    
</project>
